package cloud.mmda.core.entities;

import cloud.mmda.core.Tenancy;

/**
 * 租户相关的组合键接口
 */
public interface CompositeTenancyKey extends CompositeKey,TenancyKey {

}
